--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "next": "^12.1.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
