--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^12.1.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "prisma": "^3.11.0",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0"
   },
