--- a/.env
+++ b/.env
@@ -6,4 +6,10 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://127.0.0.1:8659/eggplant-market"
+# npm run dev
+
+# pscale connect eggplant-market
+
+# npx prisma studio
+
+DATABASE_URL="mysql://127.0.0.1:13279/eggplant-market"
