--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@
 
 # npx prisma studio
 
-DATABASE_URL="mysql://127.0.0.1:13279/eggplant-market"
+DATABASE_URL="mysql://127.0.0.1:3538/eggplant-market"
+TWILIO_SID="AC08c957d9b602657d7859b74008644395"
+TWILIO_TOKEN="3e072ca38783282d2490b81e52896232"
