--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prisma": "^3.11.0",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
-    "react-hook-form": "^7.25.0"
+    "react-hook-form": "^7.25.0",
+    "twilio": "^3.76.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
