--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.0",
+    "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.4.0",
     "next": "^12.1.0",
     "prettier": "^2.5.1",
