--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^3.11.0",
     "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.4.0",
+    "iron-session": "^6.1.1",
     "next": "^12.1.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
