--- a/.env
+++ b/.env
@@ -12,6 +12,11 @@
 
 # npx prisma studio
 
-DATABASE_URL="mysql://127.0.0.1:3538/eggplant-market"
+DATABASE_URL="mysql://127.0.0.1:8279/eggplant-market"
 TWILIO_SID="AC08c957d9b602657d7859b74008644395"
 TWILIO_TOKEN="3e072ca38783282d2490b81e52896232"
+TWILIO_MSID=" MGf06127e96e2496c6740c6f3917a5995f"
+MY_PHONENUMBER="+821096948890"
+
+SENDGRID_KEY="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"
+COOKIE_PASSWORD="~<wM8mjYJ34!z_7t6?XL/wJ<TRZ\][nEjaieve"
