--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0-rc.0",
     "react-hook-form": "^7.25.0",
     "swr": "^1.2.2",
+    "ts-node": "^10.7.0",
     "twilio": "^3.76.0"
   },
   "devDependencies": {
@@ -32,5 +33,8 @@
     "prisma": "^3.11.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
