--- a/.env
+++ b/.env
@@ -20,5 +20,6 @@ MY_PHONENUMBER="+821096948890"
 
 SENDGRID_KEY="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"
 COOKIE_PASSWORD="~<wM8mjYJ34!z_7t6?XL/wJ<TRZ\][nEjaieve"
-CF_API="3gFWFwD4nhrt2htr_Wsvivz5saDnm5pb-EJdUagZ"
+CF_API_IMAGE="3gFWFwD4nhrt2htr_Wsvivz5saDnm5pb-EJdUagZ"
+CF_API_STREAM="XNJewpRcsDCeiZ9pAAvqEKCAVB12Wb7bAA9ChuMO"
 CF_ACCOUNT="27c1a285a001b9c98ec6d455092fc686"
