정보수정 성공시 swal 추가

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "react-hook-form": "^7.25.0",
+    "sweetalert2": "^11.4.7",
     "swr": "^1.2.2",
     "ts-node": "^10.7.0",
     "twilio": "^3.76.0"
